--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap");
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: "Lato", sans-serif;
 }
 body {
   overflow-x: hidden;
+}
+.bg-default {
+  background: #6ed7d9;
 }
 .container-fluid {
   padding: 0;
@@ -59,4 +65,56 @@ body {
 .container-fluid#footer .col-9 > p {
   font-size: large;
   margin-top: 15px;
+}
+
+/* contact form */
+#contact-form {
+  padding: 3% 5%;
+}
+#contact-form form .input input {
+  width: 100%;
+  height: 40px;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  margin-top: 2%;
+  background-color: #59e5eb;
+}
+.form-select {
+  background-color: #59e5eb;
+}
+#contact-form form .input textarea {
+  width: 100%;
+  background-color: #59e5eb;
+  border-radius: 10px;
+}
+
+.container-fluid#contact-pic {
+  background: url(./Images/contact-pic.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+}
+.container-fluid#contact-pic div:nth-child(1) {
+  background-color: #6ed7d9;
+  height: 100%;
+  width: 100%;
+  opacity: 0.5;
+  position: relative;
+}
+.container-fluid#contact-pic .contact-text {
+  color: black;
+  position: absolute;
+}
+
+/* About us css */
+
+.container-fluid#about-us .images.container {
+}
+.container-fluid#about-us .images.container .card-img-top {
+  height: 361px;
+  width: 286px;
+  object-fit: cover;
 }
